# ai-router

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  ai-router.toml  ai-router.toml.example  build.rs  docker-compose.yml  utils.sh
.github/workflows/: rust-tests.yml
benches/: ai_router_bench.rs
client/: compare_output.py  openai_chatcompletion_client.py  requirements.txt  utils.sh
examples/: config.toml
examples/templates/chat/: mistral.j2
examples/templates/completions/: disable.j2  mistral.j2
src/: backend.rs  config.rs  errors.rs  lib.rs  main.rs  request.rs  routes.rs  startup.rs  state.rs  telemetry.rs  templater.rs  tokenizers.rs  tracing.rs  utils.rs
src/backend/: main.rs  mod.rs  triton.rs
src/backend/openai/: mod.rs  routes.rs
src/backend/openai/routes/: audio.rs  chat.rs  embeddings.rs
src/backend/triton/: mod.rs  request.rs  routes.rs  utils.rs
src/backend/triton/routes/: audio.rs  chat.rs  completions.rs  embeddings.rs  mod.rs
src/client/: embed.rs
src/routes/: audio.rs  chat.rs  completions.rs  embeddings.rs  mod.rs  models.rs
tests/: ai-router.toml.default_backend  ai-router.toml.model_backend_invalid  ai-router.toml.multiple_default_backends  ai-router.toml.multiple_default_models  ai-router.toml.no_backends  ai-router.toml.no_default_backend  ai-router.toml.no_models  ai-router.toml.template_missing  backend.triton.routes.embeddings.test_transform_triton_f32_array  utils.deserialize_bytes_tensor
