[package]
name = "ai-router"
version = "0.1.0"
edition = "2021"
default-run = "ai-router"

[[bench]]
name = "ai_router_bench"
harness = false

[[bin]]
name = "ai-router"
path = "src/main.rs"

[[bin]]
name = "embed-client"
path = "src/client/embed.rs"

[dependencies]
axum = "0.7.4"
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["trace", "request-id", "util"] }
tokio = { version = "1.36.0", features = ["full"] }
async-stream = "0.3.5"
tonic = "0.11.0"
prost = "0.12.1"
prost-types = "0.12.1"
anyhow = { version = "1.0.80", features = ["backtrace"] }
clap = { version = "4.5.1", features = ["derive"] }
figment = { version = "0.10.14", features = ["env"] }
serde = { version = "1.0.196", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json", "time"] }
tracing-log = "0.2.0"
tracing-bunyan-formatter = "0.3.9"
tracing-opentelemetry = "0.22.0"
opentelemetry = { version = "0.21.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.21.0", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = "0.14.0"
opentelemetry-jaeger = "0.20.0"
axum-tracing-opentelemetry = "0.17.1"
axum-prometheus = "0.6.1"
bytes = "1.5.0"
uuid = { version = "1.7.0", features = ["v4"] }
serde_json = "1.0.113"
openai_dive = { version = "0.4.5", features = ["stream"] }
toml = "0.8.10"
serde_with = "3.6.1"
reqwest = "0.11.24"
bytemuck = "1.14.3"

[build-dependencies]
anyhow = "1.0.80"
tonic-build = "0.11.0"
walkdir = "2.4.0"

[dev-dependencies]
criterion = "0.5.1"
