[package]
name = "ai-router"
version = "0.1.0"
edition = "2021"
default-run = "ai-router"

[[bench]]
name = "ai_router_bench"
harness = false

[[bin]]
name = "ai-router"
path = "src/main.rs"

[[bin]]
name = "embed-client"
path = "src/client/embed.rs"

[dependencies]
anyhow = { version = "1.0.81", features = ["backtrace"] }
async-stream = "0.3.5"
axum = "0.7.4"
axum-prometheus = "0.6.1"
axum-tracing-opentelemetry = "0.18.0"
bytemuck = "1.15.0"
bytes = "1.5.0"
clap = { version = "4.5.3", features = ["derive"] }
figment = { version = "0.10.14", features = ["env"] }
openai_dive = { version = "0.4.5", features = ["stream"] }
opentelemetry = { version = "0.21.0", features = ["metrics"] }
opentelemetry-jaeger = "0.20.0"
opentelemetry-otlp = "0.14.0"
opentelemetry_sdk = { version = "0.21.0", features = ["rt-tokio", "metrics"] }
prost = "0.12.1"
prost-types = "0.12.1"
reqwest = "0.11.24"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_with = "3.6.1"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.10"
tonic = "0.11.0"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace", "request-id", "util"] }
tracing = "0.1.40"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-opentelemetry = "0.22.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json", "time"] }
uuid = { version = "1.7.0", features = ["v4"] }

[build-dependencies]
anyhow = "1.0.81"
tonic-build = "0.11.0"
walkdir = "2.4.0"

[dev-dependencies]
criterion = "0.5.1"
