[package]
name = "ai-router"
version = "0.1.0"
edition = "2021"
default-run = "ai-router"

[[bench]]
name = "ai_router_bench"
harness = false

[[bin]]
name = "ai-router"
path = "src/main.rs"

[[bin]]
name = "embed-client"
path = "src/client/embed.rs"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
async-stream = "0.3.5"
axum = { version = "0.7.5", features = ["multipart"] }
axum-prometheus = "0.6.1"
axum-tracing-opentelemetry = "0.18.1"
bytemuck = "1.16.0"
bytes = "1.6.0"
clap = { version = "4.5.4", features = ["derive"] }
figment = { version = "0.10.19", features = ["env"] }
openai_dive = { version = "0.4.8", default-features = false, features = ["rustls-tls", "stream", "tokio", "tokio-util"] }
opentelemetry = { version = "0.23.0", features = ["metrics"] }
opentelemetry-jaeger-propagator = "0.2.0"
opentelemetry-otlp = "0.16.0"
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio", "metrics"] }
prost = "0.12.6"
prost-types = "0.12.6"
reqwest = { version = "0.12.4", default-features = false, features = ["rustls-tls-native-roots"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_with = "3.8.1"
tokenizers = { version = "0.19.1", features = ["http"] }
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.13"
tonic = "0.11.0"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["limit", "request-id", "trace", "util"] }
tracing = "0.1.40"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-opentelemetry = "0.24.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json", "time"] }
uuid = { version = "1.8.0", features = ["v4"] }

[build-dependencies]
anyhow = "1.0.86"
tonic-build = "0.11.0"
walkdir = "2.5.0"

[dev-dependencies]
criterion = "0.5.1"
